--- a/project/www/admin/src/css/pagination.css
+++ b/project/www/admin/src/css/pagination.css
@@ -1,15 +1,19 @@
 #pagination {
     text-align: center;
+    margin-top: 20px;
 }
 
 #pagination a {
     text-align: center;
     padding : 10px;
     font-size: 20px;
-    background-color: aquamarine;
-    border: blue 1px solid;
+    color: white;
+    background-color: black;
+    border: rgb(116, 116, 116) 1px solid;
     border-radius: 2px;
+    margin:5px;
+    border-radius: 4px;
 }
 #pagination a.pg-seleted {
-    background-color: rgb(5, 255, 172);
+    background-color: rgb(34, 34, 34);
 }
