--- a/project/www/admin/src/css/style_dialog.css
+++ b/project/www/admin/src/css/style_dialog.css
@@ -1,6 +1,7 @@
-#dialog {
+#dialog, #dialog-user {
     position: fixed;
     background-color: rgb(0 0 0 / 95%);
+    background-image: url("./../../../src/img/gridbg_glow.png");
     min-width: 290px;
     width: 100%;
     height: 100vh;
@@ -16,9 +17,16 @@
     -ms-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);*/
 }
-#dialog .admin-contenu {
+
+#dialog-user #img-add {
+    width: 180px;
+    height: 180px;
+}
+
+#dialog .admin-contenu, #dialog-user .admin-contenu {
     padding: 10px;
 }
+
 .close-dialog {
     position: absolute;
     top: 0;
